# Monorepo

./: .gitignore  README.md
Standup/app/: build.gradle
actix-bank-application/backend/: Cargo.toml  README.md
actix-bank-application/backend/src/: application_error.rs  main.rs
actix-bank-application/backend/src/authentication/: authentication_middleware.rs  jwt_service.rs  mod.rs
actix-bank-application/backend/src/user/: mod.rs  user_api.rs  user_model.rs  user_service.rs
actix-bank-application/frontend/: package-lock.json  package.json
barrikid/barrikid/: README.md  pubspec.yaml
electron-app/: package-lock.json  package.json
electron-playground/: index.html  package-lock.json  package.json  tsconfig.json
electron-playground/src/: main.ts
flutter_test_app/: README.md  pubspec.yaml
flutter_test_app/lib/: cart.dart  catalog.dart  main.dart
flutter_test_app/test/: widget_test.dart
haskell/: Dockerfile  docker-compose.yml
haskell/src/: main.hs
home-surveillance/detector/: default_detection.py  movement-detection.py  room-status.py
home-surveillance/stream-server/: package.json
home-surveillance/surveillance-dashboard/: package-lock.json  package.json  (+1 more)
lolprojects/: README.md  build.gradle.kts  settings.gradle
npm-dashboard/: package-lock.json  package.json
pdf-as-a-service/: Dockerfile  README.md  docker-compose.yml
raspberry/: build.gradle  settings.gradle
react-playground/: package-lock.json  package.json
rust-game/: Cargo.toml
stand-desk/: index.html  index.js  main.py
todo-list/: package-lock.json  package.json
(+88 files in other folders)
